@@ -1,3 +1,10 @@
+2002-02-16  Richard Williamson  <rjw@apple.com>
+
+        Reminders to change frame<->datasource ownership cycle.
+        
+	* WebView.subproj/IFWebDataSource.mm: (-[IFWebDataSource setFrame:]),
+	(-[IFWebDataSource frame]):
+
 2002-02-13  Richard Williamson  <rjw@apple.com>
 
     Fixed cleanup.  Should revisit ownership graph.  Cycles may be avoidable.
